--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Test</title>
     <script>
-        const apiUrl = "http://localhost:2025/test";
+        const apiUrl = "https://expert-spork-7vvrg4xqv79q3wp9v-2025.app.github.dev/test";
 
         async function getAll() {
             const response = await fetch(apiUrl);
